--- a/weather/src/main/resources/application.properties
+++ b/weather/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/weather
 spring.datasource.username=root
-spring.datasource.password=123456
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.password=061097
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.use_sql_comments=true
